<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/warmUp"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_row="0"
        android:layout_column="5" />

    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stretch"
        android:id="@+id/textView2"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_row="1"
        android:layout_column="5" />

    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/roundNum"
        android:id="@+id/textView3"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_row="2"
        android:layout_column="5" />

    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prep"
        android:id="@+id/textView4"
        android:layout_row="3"
        android:layout_column="0" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_row="3"
        android:layout_column="5" />

    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rest"
        android:id="@+id/textView5"
        android:layout_row="4"
        android:layout_column="0" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_row="4"
        android:layout_column="5" />

    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/round"
        android:id="@+id/textView6"
        android:layout_row="5"
        android:layout_column="0" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_row="5"
        android:layout_column="5" />

    <TextView
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cooldown"
        android:id="@+id/textView7"
        android:layout_row="6"
        android:layout_column="0" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_row="6"
        android:layout_column="5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/button"
        android:layout_row="7"
        android:layout_column="4" />

</GridLayout>